--- a/css/screens/survey.css
+++ b/css/screens/survey.css
@@ -33,6 +33,12 @@ main {
   padding: 40px 0 20px;
   line-height: 1.5;
 }
+.questiontime-container {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0px 0 20px;
+  line-height: 1.5;
+}
 button {
   border: 0;
   outline: 0;
@@ -86,6 +92,11 @@ button {
     width: 240px;
     margin: 0 auto;
   }
+.questiontime-container {
+	font-size: 2rem;
+    width: 40px;
+    margin: 0 auto;
+}
   .check-container {
     width: 100%;
     margin: 30px auto 0;
