--- a/css/screens/index.css
+++ b/css/screens/index.css
@@ -47,6 +47,26 @@ h1 {
   background-color: #34495e;
   color: #ecf0f1;
 }
+.youtube-link {
+    font-size: 1rem;
+    line-height: 1.71;
+    text-align: center;
+    color: #f73737;
+    text-decoration: underline;
+}
+
+.youtube-link:hover {
+    font-size: 1rem;
+    line-height: 1.71;
+    text-align: center;
+    color: #f73737;
+    text-decoration: underline;
+}
+
+.youtube-icon {
+    width: 20px;
+    height: 17.262px;
+}
 @media screen and (min-width: 900px) {
   nav ul {
     display: flex;
