--- a/css/screens/blog.css
+++ b/css/screens/blog.css
@@ -64,6 +64,9 @@ aside {
   width: 20%;
 }
 section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 80%;
   padding-left: 25px;
 }
@@ -71,6 +74,12 @@ section h2 {
   font-size: 2.5em;
   margin-bottom: 10px;
 }
+
+section p {
+width: 80%;
+display: flex;
+justify-content: center;
+  }
 .profile {
   border: 1px solid #bdc3c7;
   border-bottom: 2px solid #2d3436;
